feat(api): done teams
