# routes/api.php
@@ -10,7 +10,7 @@ use Illuminate\Support\Facades\Route;
 | API Routes
 |--------------------------------------------------------------------------
 |
-| Here is where you can register API routes for your application. These
+| Here is where you can regiseasonss, [TeamsController::class, 'seasons'])->name('teams.seasons');ter API routes for your application. These
 | routes are loaded by the RouteServiceProvider and all of them will
 | be assigned to the "api" middleware group. Make something great!
 |
@@ -24,7 +24,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::group(['prefix' => 'v1'], function () {
     Route::get('timezones', [TimezoneController::class, 'index'])->name('timezones.index');
     Route::group(['prefix' => 'teams'], function () {
-       Route::get('/information', [TeamsController::class, 'information'])->name('teams.information');
-       Route::post('/statistics', [TeamsController::class, 'statistics'])->name('teams.statistics');
+        Route::get('/information', [TeamsController::class, 'information'])->name('teams.information');
+        Route::post('/statistics', [TeamsController::class, 'statistics'])->name('teams.statistics');
+        Route::post('/seasons', [TeamsController::class, 'seasons'])->name('teams.seasons');
+        Route::get('/countries', [TeamsController::class, 'countries'])->name('teams.countries');
     });
 });
